@@ -3,7 +3,5 @@
  <javascript cacheable="True" compression="safe" cookable="True"
     enabled="True" expression="" id="hideShow.js" inline="False"/>
  <javascript cacheable="True" compression="safe" cookable="True"
-    enabled="True" expression="" id="tabsDropDown.js" inline="False"/>
- <javascript cacheable="True" compression="safe" cookable="True"
     enabled="True" expression="" id="jquery.global.js" inline="False"/>
 </object>
