@@ -1,21 +1,0 @@
-startList = function() {
-    if (document.all&&document.getElementById) {
-        navRoot = document.getElementById("portal-tabs-nav");
-
-        for (i=0; i<navRoot.childNodes.length; i++) {
-            node = navRoot.childNodes[i];
-
-            if (node.nodeName=="LI") {
-                node.onmouseover=function() {
-                    this.className+=" over";
-                }
-                node.onmouseout=function() {
-                    this.className=this.className.replace(" over", "");
-                }
-
-            }
-        }
-    }
-}
-
-window.onload=startList;
