@@ -4,6 +4,10 @@ History of this buildout
 5.0.11 (unreleased)
 -------------------
 
+- Removed tabsDropMenu.js which gave an error but was not used.
+  Removed unused global_menu.pt and global_sections.pt.
+  [maurits]
+
 - css: load the portal header.jpg from the Plone Site root.
   [maurits]
 
